objects/CampaignMember.object
<CustomObject><fields>
        <fullName>ACF_Alumni_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alumni Discount</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Commuter_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commuter Discount</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Cvent_Amount_Ordered__c</fullName>
        <label>Cvent Amount Ordered</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Cvent_Amount_Paid__c</fullName>
        <label>Cvent Amount Paid</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Cvent_Discount_Name__c</fullName>
        <label>Cvent Discount Name</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Cvent_Discounts_Applied__c</fullName>
        <label>Cvent Discounts Applied</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Evening_MBA_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evening MBA Discount</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Group_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Discount</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Opportunity.RecordType.Id</field>
                <operation>equals</operation>
                <value>012360000012HLC</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.Id</field>
                <operation>equals</operation>
                <value>012360000012HsP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Registration_Motivation__c</fullName>
        <label>Registration Motivation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Program_Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>------------------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--------------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panelist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mock Interviewer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Rooming_Comments__c</fullName>
        <label>Rooming Comments</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Bounces__c</fullName>
        <description>Bounces</description>
        <label>Bounces</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Clicks__c</fullName>
        <description>Clicks</description>
        <label>Clicks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cvent_Confirmation_Number__c</fullName>
        <label>Cvent Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Cvent_Registration_ID__c</fullName>
        <label>Cvent Registration ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>EmailEvents__c</fullName>
        <description>This field will be used to store email events with timestamp such as open, click, etc.</description>
        <label>Email Events</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Forwards__c</fullName>
        <description>Forwards</description>
        <label>Forwards</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opens__c</fullName>
        <description>Opens</description>
        <label>Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><recordTypes>
        <fullName>Demo_2_ACF</fullName>
        <active>true</active>
        <description>demo for ACF campaign template</description>
        <label>Demo_2_ACF</label>
    </recordTypes></CustomObject>